[gd_scene load_steps=9 format=3 uid="uid://d2s5voyibjcw6"]

[ext_resource type="Script" uid="uid://bbvx8fyr8d4h4" path="res://scenes/Card/card.gd" id="1_nufwx"]
[ext_resource type="Texture2D" uid="uid://dlvvnb244xew5" path="res://assets/BG/Cards/CardBack.png" id="2_r0nle"]
[ext_resource type="Texture2D" uid="uid://b54t27nujkc4x" path="res://assets/sprites/bulbasaur.png" id="3_r5uov"]
[ext_resource type="Texture2D" uid="uid://bk6cmpc3v5kjt" path="res://assets/BG/Cards/NormalCard.png" id="4_nufwx"]

[sub_resource type="Animation" id="Animation_rnlqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardFront:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardFront:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pacjk"]
resource_name = "token_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2.4622862, 0.17075476, 0.17075476),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.20037545, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, -1, -1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardFront:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2.4622862, 0.17075476, 0.17075476),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardFront:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kls7e"]
_data = {
&"RESET": SubResource("Animation_rnlqf"),
&"token_flip": SubResource("Animation_pacjk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boq2l"]
size = Vector2(168, 168)

[node name="card" type="Node2D"]
script = ExtResource("1_nufwx")

[node name="CardFront" type="Sprite2D" parent="."]
texture = ExtResource("2_r0nle")

[node name="Sprite" type="Sprite2D" parent="CardFront"]
position = Vector2(4.295454, -10.5)
scale = Vector2(1.9588068, 1.9588063)
texture = ExtResource("3_r5uov")

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("4_nufwx")

[node name="flip" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kls7e")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_boq2l")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
